--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a mi portafolio :)</h1>
+        <h1>Bienvenido a mi portafolio :D</h1>
     </header>
 </body>
 </html>
