--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <header>
         <h1>Bienvenido a mi portafolio :D</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto natus asperiores numquam id, atque aut expedita cupiditate eveniet ut vitae sapiente laboriosam facilis sunt pariatur quos sequi totam nam doloribus.
+        </p>
     </header>
 </body>
 </html>
